--- a/report.tex
+++ b/report.tex
@@ -30,7 +30,7 @@
 % Select which version this is:
 % For the (anonymous) submission (without your name or acknowledgements)
 % uncomment the following line (or let the makefile do this for you)
-\submissiontrue
+% \submissiontrue
 % For the final version (with your name) leave the above commented.
 
 \begin{document}
@@ -49,7 +49,7 @@
 \label{firstcontentpage} % start page count here
 \zlabel{firstpdfcontentpage}
 \include{chapters/10_introduction}
-\include{chapters/11_background}
+% \include{chapters/11_background}
 \include{chapters/12_measuring_compiler_performance}
 \include{chapters/13_profiling_python_bytecode}
 \include{chapters/14_specialising_optimising_xdsl_rewriting}
