Staging commit working on dynamism section

--- a/references.bib
+++ b/references.bib
@@ -66,6 +66,14 @@
   file = {/Users/edjg/Zotero/storage/JR5TLPBR/1462446-mach_absolute_time.html}
 }
 
+@online{armlimitedARMCortexRSeries,
+  title = {{{ARM Cortex-R Series}} ({{Armv7-R}}) {{Programmer}}'s {{Guide}}},
+  author = {{Arm Limited}},
+  url = {https://developer.arm.com/documentation/den0042/a/Unified-Assembly-Language-Instructions/Branches/Direct-and-indirect-branches},
+  urldate = {2025-06-05},
+  file = {/Users/edjg/Zotero/storage/8VGRGZBA/Direct-and-indirect-branches.html}
+}
+
 @article{aycockBriefHistoryJustintime2003,
   title = {A Brief History of Just-in-Time},
   author = {Aycock, John},
@@ -361,6 +369,15 @@
   urldate = {2025-05-12},
   isbn = {978-0-89791-662-2},
   file = {/Users/edjg/Zotero/storage/4AMQL6SQ/Hölzle and Ungar - 1994 - Optimizing dynamically-dispatched calls with run-time type feedback.pdf}
+}
+
+@standard{internationalorganizationforstandardizationISOIEC148821998,
+  title = {{{ISO}}/{{IEC}} 14882:1998 {{Programming}} Languages — {{C}}++},
+  shorttitle = {{{ISO}} / {{IEC}} 14882 International Standard - First Edition 1998-09-01},
+  author = {{International Organization for Standardization}},
+  date = {1998},
+  url = {https://www.iso.org/standard/25845.html},
+  urldate = {2025-06-04}
 }
 
 @online{joshhabermanTailCallingInterpreter2025,
@@ -708,6 +725,22 @@
   urldate = {2025-05-16},
   isbn = {978-0-89791-647-9},
   file = {/Users/edjg/Zotero/storage/6WAK9W8U/Stoltz et al. - 1994 - Constant propagation a fresh, demand-driven look.pdf}
+}
+
+@incollection{stroustrupHistory197919911996,
+  title = {A History of {{C}}++: 1979--1991},
+  shorttitle = {A History of {{C}}++},
+  booktitle = {History of Programming Languages---{{II}}},
+  author = {Stroustrup, Bjarne},
+  date = {1996-01-01},
+  pages = {699--769},
+  publisher = {Association for Computing Machinery},
+  location = {New York, NY, USA},
+  url = {https://doi.org/10.1145/234286.1057836},
+  urldate = {2025-06-04},
+  abstract = {This paper outlines the history of the C++ programming language. The emphasis is on the ideas, constraints, and people that shaped the language, rather than the minutiae of language features. Key design decisions relating to language features are discussed, but the focus is one the overall design goals and practical constraints. The evolution of C++ is traced from C with Classes to the current ANSI and ISO standards work and the explosion of use, interest, commercial activity, compilers, tools, environments, and libraries.},
+  isbn = {978-0-201-89502-5},
+  file = {/Users/edjg/Zotero/storage/ICNTJY4M/Stroustrup - 1996 - A history of C++ 1979--1991.pdf}
 }
 
 @online{tomdaleAdventuresMicrobenchmarking2017,
