--- a/references.bib
+++ b/references.bib
@@ -267,6 +267,23 @@
   file = {/Users/edjg/Zotero/storage/PTHTQWMD/Canonicalization.html}
 }
 
+@inproceedings{driesenDirectCostVirtual1996,
+  title = {The Direct Cost of Virtual Function Calls in {{C}}++},
+  booktitle = {Proceedings of the 11th {{ACM SIGPLAN}} Conference on {{Object-oriented}} Programming, Systems, Languages, and Applications},
+  author = {Driesen, Karel and Hölzle, Urs},
+  date = {1996-10-01},
+  series = {{{OOPSLA}} '96},
+  pages = {306--323},
+  publisher = {Association for Computing Machinery},
+  location = {New York, NY, USA},
+  doi = {10.1145/236337.236369},
+  url = {https://dl.acm.org/doi/10.1145/236337.236369},
+  urldate = {2025-06-05},
+  abstract = {We study the direct cost of virtual function calls in C++ programs, assuming the standard implementation using virtual function tables. We measure this overhead experimentally for a number of large benchmark programs, using a combination of executable inspection and processor simulation. Our results show that the C++ programs measured spend a median of 5.2\% of their time and 3.7\% of their instructions in dispatch code. For "all virtuals" versions of the programs, the median overhead rises to 13.7\% (13\% of the instructions). The "thunk" variant of the virtual function table implementation reduces the overhead by a median of 21\% relative to the standard implementation. On future processors, these overheads are likely to increase moderately.},
+  isbn = {978-0-89791-788-9},
+  file = {/Users/edjg/Zotero/storage/TMQ7HA2T/Driesen and Hölzle - 1996 - The direct cost of virtual function calls in C++.pdf}
+}
+
 @unpublished{emerybergerPythonPerformanceMatters2022,
   title = {"{{Python Performance Matters}}" by {{Emery Berger}} ({{Strange Loop}} 2022)},
   author = {{Emery Berger}},
@@ -332,6 +349,15 @@
   url = {https://github.com/gaogaotiantian/viztracer},
   urldate = {2025-04-28},
   abstract = {A debugging and profiling tool that can trace and visualize python code execution}
+}
+
+@article{goldthwaite2006technical,
+  title = {Technical Report on {{C}}++ Performance},
+  author = {Goldthwaite, Lois},
+  date = {2006},
+  journaltitle = {ISO/IEC PDTR},
+  volume = {18015},
+  file = {/Users/edjg/Zotero/storage/ASSTU7N8/Goldthwaite - 2006 - Technical report on C++ performance.pdf}
 }
 
 @software{guidovanrossumPythonCpython2025,
@@ -519,6 +545,16 @@
   eventtitle = {2022 {{USENIX Annual Technical Conference}} ({{USENIX ATC}} 22)},
   langid = {english},
   file = {/Users/edjg/Zotero/storage/P3UA85XD/Lion et al. - 2022 - Investigating Managed Language Runtime Performance Why JavaScript and Python are 8x and 29x slowe.pdf}
+}
+
+@article{luLinkTimeOptimizationDynamic,
+  title = {Link-{{Time Optimization}} of {{Dynamic Casts}} in {{C}}++ {{Programs}}},
+  author = {Lu, Xufan and Lopes, Nuno P},
+  journaltitle = {Proc. ACM Program. Lang.},
+  url = {https://pldi25.sigplan.org/details/pldi-2025-papers/92/Link-Time-Optimization-of-Dynamic-Casts-in-C-Programs},
+  issue = {PLDI},
+  langid = {english},
+  file = {/Users/edjg/Zotero/storage/B8HUUR5Y/Lu and Lopes - Link-Time Optimization of Dynamic Casts in C++ Programs.pdf}
 }
 
 @software{michaeldroettboomAirspeedvelocityAsv2025,
@@ -741,6 +777,16 @@
   abstract = {This paper outlines the history of the C++ programming language. The emphasis is on the ideas, constraints, and people that shaped the language, rather than the minutiae of language features. Key design decisions relating to language features are discussed, but the focus is one the overall design goals and practical constraints. The evolution of C++ is traced from C with Classes to the current ANSI and ISO standards work and the explosion of use, interest, commercial activity, compilers, tools, environments, and libraries.},
   isbn = {978-0-201-89502-5},
   file = {/Users/edjg/Zotero/storage/ICNTJY4M/Stroustrup - 1996 - A history of C++ 1979--1991.pdf}
+}
+
+@article{sutter2019zero,
+  title = {Zero-Overhead Deterministic Exceptions: {{Throwing}} Values},
+  author = {Sutter, Herb},
+  date = {2019},
+  journaltitle = {C++ open-std proposal P0709},
+  volume = {2},
+  pages = {10},
+  file = {/Users/edjg/Zotero/storage/Z9FJ34TH/Sutter - 2019 - Zero-overhead deterministic exceptions Throwing values.pdf}
 }
 
 @online{tomdaleAdventuresMicrobenchmarking2017,
