--- a/report.tex
+++ b/report.tex
@@ -36,10 +36,10 @@
 % For the final version (with your name) leave the above commented.
 
 
-%TC:group table 0 1
-%TC:group tabular 1 1
-%TC:group figure 1 1
-%TC:group code 1 1
+%TC|group table 0 1
+%TC|group tabular 1 1
+%TC|group figure 1 1
+%TC|group code 1 1
 \begin{document}
 
 %TC:ignore
