Tweaks to dynamism section

--- a/references.bib
+++ b/references.bib
@@ -170,6 +170,21 @@
   file = {/Users/edjg/Zotero/storage/2PSMWKHJ/Berger et al. - 2023 - Triangulating Python Performance Issues with SCALENE .pdf}
 }
 
+@inproceedings{brueningInfrastructureAdaptiveDynamic2003,
+  title = {An Infrastructure for Adaptive Dynamic Optimization},
+  booktitle = {International {{Symposium}} on {{Code Generation}} and {{Optimization}}, 2003. {{CGO}} 2003.},
+  author = {Bruening, D. and Garnett, T. and Amarasinghe, S.},
+  date = {2003-03},
+  pages = {265--275},
+  doi = {10.1109/CGO.2003.1191551},
+  url = {https://ieeexplore.ieee.org/abstract/document/1191551},
+  urldate = {2025-06-06},
+  abstract = {Dynamic optimization is emerging as a promising approach to overcome many of the obstacles of traditional static compilation. But while there are a number of compiler infrastructures for developing static optimizations, there are very few for developing dynamic optimizations. We present a framework for implementing dynamic analyses and optimizations. We provide an interface for building external modules, or clients, for the DynamoRIO dynamic code modification system. This interface abstracts away many low-level details of the DynamoRIO runtime system while exposing a simple and powerful, yet efficient and lightweight API. This is achieved by restricting optimization units to linear streams of code and using adaptive levels of detail for representing instructions. The interface is not restricted to optimization and can be used for instrumentation, profiling, dynamic translation, etc. To demonstrate the usefulness and effectiveness of our framework, we implemented several optimizations. These improve the performance of some applications by as much as 40\% relative to native execution. The average speedup relative to base DynamoRIO performance is 12\%.},
+  eventtitle = {International {{Symposium}} on {{Code Generation}} and {{Optimization}}, 2003. {{CGO}} 2003.},
+  keywords = {Abstracts,Application software,Computer science,Instruments,Laboratories,Optimizing compilers,Performance analysis,Runtime,Software libraries,Software performance},
+  file = {/Users/edjg/Zotero/storage/2TK9SA4U/Bruening et al. - 2003 - An infrastructure for adaptive dynamic optimization.pdf}
+}
+
 @inproceedings{callahanInterproceduralConstantPropagation1986,
   title = {Interprocedural Constant Propagation},
   booktitle = {Proceedings of the 1986 {{SIGPLAN}} Symposium on {{Compiler}} Construction},
